// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroStats > must render with default mock summary data. 1`] = `
<div>
  <div
    class="mb-8 grid grid-cols-2 gap-4 md:grid-cols-4"
  >
    <div
      class="group/card flex flex-col gap-6 overflow-hidden rounded-4xl bg-card py-6 text-sm text-card-foreground shadow-md ring-1 ring-foreground/5 has-[>img:first-child]:pt-0 data-[size=sm]:gap-4 data-[size=sm]:py-4 dark:ring-foreground/10 *:[img:first-child]:rounded-t-4xl *:[img:last-child]:rounded-b-4xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header auto-rows-min gap-1.5 rounded-t-4xl px-6 group-data-[size=sm]/card:px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-6 group-data-[size=sm]/card:[.border-b]:pb-4 flex flex-row items-center justify-between space-y-0 pb-2"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base font-medium"
          data-slot="card-title"
        >
          Total de personajes
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-users text-muted-foreground size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
      </div>
      <div
        class="px-6 group-data-[size=sm]/card:px-4"
        data-slot="card-content"
      >
        <div
          class="text-3xl font-bold"
        >
          25
        </div>
        <div
          class="mt-2 flex gap-1"
        >
          <span
            class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center gap-1 overflow-hidden rounded-3xl border border-transparent px-2 py-0.5 font-medium whitespace-nowrap transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! bg-secondary text-secondary-foreground [a]:hover:bg-secondary/80 text-xs"
            data-slot="badge"
            data-variant="secondary"
          >
            18
             Heroes
          </span>
          <span
            class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center gap-1 overflow-hidden rounded-3xl border border-transparent px-2 py-0.5 font-medium whitespace-nowrap transition-all focus-visible:border-ring focus-visible:ring-[3px] has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! bg-destructive/10 text-destructive focus-visible:ring-destructive/20 dark:bg-destructive/20 dark:focus-visible:ring-destructive/40 [a]:hover:bg-destructive/20 text-xs"
            data-slot="badge"
            data-variant="destructive"
          >
            7
             Villains
          </span>
        </div>
      </div>
    </div>
    <div
      class="group/card flex flex-col gap-6 overflow-hidden rounded-4xl bg-card py-6 text-sm text-card-foreground shadow-md ring-1 ring-foreground/5 has-[>img:first-child]:pt-0 data-[size=sm]:gap-4 data-[size=sm]:py-4 dark:ring-foreground/10 *:[img:first-child]:rounded-t-4xl *:[img:last-child]:rounded-b-4xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header auto-rows-min gap-1.5 rounded-t-4xl px-6 group-data-[size=sm]/card:px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-6 group-data-[size=sm]/card:[.border-b]:pb-4 flex flex-row items-center justify-between space-y-0 pb-2"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base font-medium"
          data-slot="card-title"
        >
          Favoritos
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-heart text-muted-foreground size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </div>
      <div
        class="px-6 group-data-[size=sm]/card:px-4"
        data-slot="card-content"
      >
        <div
          aria-label="Favorite characters count"
          class="text-3xl font-bold text-red-600"
        >
          0
        </div>
        <p
          aria-label="Favorite characters percentage"
          class="text-muted-foreground"
        >
          0.00
          % of total
        </p>
      </div>
    </div>
    <div
      class="group/card flex flex-col gap-6 overflow-hidden rounded-4xl bg-card py-6 text-sm text-card-foreground shadow-md ring-1 ring-foreground/5 has-[>img:first-child]:pt-0 data-[size=sm]:gap-4 data-[size=sm]:py-4 dark:ring-foreground/10 *:[img:first-child]:rounded-t-4xl *:[img:last-child]:rounded-b-4xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header auto-rows-min gap-1.5 rounded-t-4xl px-6 group-data-[size=sm]/card:px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-6 group-data-[size=sm]/card:[.border-b]:pb-4 flex flex-row items-center justify-between space-y-0 pb-2"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base font-medium"
          data-slot="card-title"
        >
          El más fuerte
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-zap text-muted-foreground size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </div>
      <div
        class="px-6 group-data-[size=sm]/card:px-4"
        data-slot="card-content"
      >
        <div
          class="text-2xl font-bold"
        >
          Superman
        </div>
        <p
          class="text-muted-foreground text-xs"
        >
          Fuerza: 
          10
          /10
        </p>
      </div>
    </div>
    <div
      class="group/card flex flex-col gap-6 overflow-hidden rounded-4xl bg-card py-6 text-sm text-card-foreground shadow-md ring-1 ring-foreground/5 has-[>img:first-child]:pt-0 data-[size=sm]:gap-4 data-[size=sm]:py-4 dark:ring-foreground/10 *:[img:first-child]:rounded-t-4xl *:[img:last-child]:rounded-b-4xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header auto-rows-min gap-1.5 rounded-t-4xl px-6 group-data-[size=sm]/card:px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-6 group-data-[size=sm]/card:[.border-b]:pb-4 flex flex-row items-center justify-between space-y-0 pb-2"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base font-medium"
          data-slot="card-title"
        >
          El más inteligente
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-trophy text-muted-foreground size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
          />
          <path
            d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
          />
          <path
            d="M18 9h1.5a1 1 0 0 0 0-5H18"
          />
          <path
            d="M4 22h16"
          />
          <path
            d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
          />
          <path
            d="M6 9H4.5a1 1 0 0 1 0-5H6"
          />
        </svg>
      </div>
      <div
        class="px-6 group-data-[size=sm]/card:px-4"
        data-slot="card-content"
      >
        <div
          class="text-2xl font-bold"
        >
          Batman
        </div>
        <p
          class="text-muted-foreground text-xs"
        >
          Inteligencia: 
          10
          /10
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeroStats > must render with default state and values. 1`] = `
<div>
  <div
    class="mb-8 grid grid-cols-2 gap-4 md:grid-cols-4"
  >
    <div
      class="group/card flex flex-col gap-6 overflow-hidden rounded-4xl bg-card py-6 text-sm text-card-foreground shadow-md ring-1 ring-foreground/5 has-[>img:first-child]:pt-0 data-[size=sm]:gap-4 data-[size=sm]:py-4 dark:ring-foreground/10 *:[img:first-child]:rounded-t-4xl *:[img:last-child]:rounded-b-4xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header auto-rows-min gap-1.5 rounded-t-4xl px-6 group-data-[size=sm]/card:px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-6 group-data-[size=sm]/card:[.border-b]:pb-4 flex flex-row items-center justify-between space-y-0 pb-2"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base font-medium"
          data-slot="card-title"
        >
          Total de personajes
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-users text-muted-foreground size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
          />
          <path
            d="M16 3.128a4 4 0 0 1 0 7.744"
          />
          <path
            d="M22 21v-2a4 4 0 0 0-3-3.87"
          />
          <circle
            cx="9"
            cy="7"
            r="4"
          />
        </svg>
      </div>
      <div
        class="px-6 group-data-[size=sm]/card:px-4"
        data-slot="card-content"
      >
        <div
          class="text-3xl font-bold"
        />
        <div
          class="mt-2 flex gap-1"
        >
          <span
            class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center gap-1 overflow-hidden rounded-3xl border border-transparent px-2 py-0.5 font-medium whitespace-nowrap transition-all focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! bg-secondary text-secondary-foreground [a]:hover:bg-secondary/80 text-xs"
            data-slot="badge"
            data-variant="secondary"
          >
             Heroes
          </span>
          <span
            class="group/badge inline-flex h-5 w-fit shrink-0 items-center justify-center gap-1 overflow-hidden rounded-3xl border border-transparent px-2 py-0.5 font-medium whitespace-nowrap transition-all focus-visible:border-ring focus-visible:ring-[3px] has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 aria-invalid:border-destructive aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 [&>svg]:pointer-events-none [&>svg]:size-3! bg-destructive/10 text-destructive focus-visible:ring-destructive/20 dark:bg-destructive/20 dark:focus-visible:ring-destructive/40 [a]:hover:bg-destructive/20 text-xs"
            data-slot="badge"
            data-variant="destructive"
          >
             Villains
          </span>
        </div>
      </div>
    </div>
    <div
      class="group/card flex flex-col gap-6 overflow-hidden rounded-4xl bg-card py-6 text-sm text-card-foreground shadow-md ring-1 ring-foreground/5 has-[>img:first-child]:pt-0 data-[size=sm]:gap-4 data-[size=sm]:py-4 dark:ring-foreground/10 *:[img:first-child]:rounded-t-4xl *:[img:last-child]:rounded-b-4xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header auto-rows-min gap-1.5 rounded-t-4xl px-6 group-data-[size=sm]/card:px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-6 group-data-[size=sm]/card:[.border-b]:pb-4 flex flex-row items-center justify-between space-y-0 pb-2"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base font-medium"
          data-slot="card-title"
        >
          Favoritos
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-heart text-muted-foreground size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </div>
      <div
        class="px-6 group-data-[size=sm]/card:px-4"
        data-slot="card-content"
      >
        <div
          aria-label="Favorite characters count"
          class="text-3xl font-bold text-red-600"
        >
          0
        </div>
        <p>
          Cargando...
        </p>
      </div>
    </div>
    <div
      class="group/card flex flex-col gap-6 overflow-hidden rounded-4xl bg-card py-6 text-sm text-card-foreground shadow-md ring-1 ring-foreground/5 has-[>img:first-child]:pt-0 data-[size=sm]:gap-4 data-[size=sm]:py-4 dark:ring-foreground/10 *:[img:first-child]:rounded-t-4xl *:[img:last-child]:rounded-b-4xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header auto-rows-min gap-1.5 rounded-t-4xl px-6 group-data-[size=sm]/card:px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-6 group-data-[size=sm]/card:[.border-b]:pb-4 flex flex-row items-center justify-between space-y-0 pb-2"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base font-medium"
          data-slot="card-title"
        >
          El más fuerte
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-zap text-muted-foreground size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"
          />
        </svg>
      </div>
      <div
        class="px-6 group-data-[size=sm]/card:px-4"
        data-slot="card-content"
      >
        <div
          class="text-2xl font-bold"
        />
        <p
          class="text-muted-foreground text-xs"
        >
          Fuerza: 
          /10
        </p>
      </div>
    </div>
    <div
      class="group/card flex flex-col gap-6 overflow-hidden rounded-4xl bg-card py-6 text-sm text-card-foreground shadow-md ring-1 ring-foreground/5 has-[>img:first-child]:pt-0 data-[size=sm]:gap-4 data-[size=sm]:py-4 dark:ring-foreground/10 *:[img:first-child]:rounded-t-4xl *:[img:last-child]:rounded-b-4xl"
      data-size="default"
      data-slot="card"
    >
      <div
        class="group/card-header @container/card-header auto-rows-min gap-1.5 rounded-t-4xl px-6 group-data-[size=sm]/card:px-4 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-6 group-data-[size=sm]/card:[.border-b]:pb-4 flex flex-row items-center justify-between space-y-0 pb-2"
        data-slot="card-header"
      >
        <div
          class="font-heading text-base font-medium"
          data-slot="card-title"
        >
          El más inteligente
        </div>
        <svg
          aria-hidden="true"
          class="lucide lucide-trophy text-muted-foreground size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
          />
          <path
            d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
          />
          <path
            d="M18 9h1.5a1 1 0 0 0 0-5H18"
          />
          <path
            d="M4 22h16"
          />
          <path
            d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
          />
          <path
            d="M6 9H4.5a1 1 0 0 1 0-5H6"
          />
        </svg>
      </div>
      <div
        class="px-6 group-data-[size=sm]/card:px-4"
        data-slot="card-content"
      >
        <div
          class="text-2xl font-bold"
        />
        <p
          class="text-muted-foreground text-xs"
        >
          Inteligencia: 
          /10
        </p>
      </div>
    </div>
  </div>
</div>
`;
